Common/SSCE/sdk/include/ssce.h

	#define API WINAPI
	#define API

/* Functions available in the basic SSCE API: */

extern SSCE_S16 API SSCE_AddToLex(SSCE_S16 sid, SSCE_S16 lexId,
  const SSCE_CHAR FAR *word, SSCE_S16 action, const SSCE_CHAR FAR *otherWord);


extern SSCE_S16 API SSCE_CheckBlock(SSCE_S16 sid, SSCE_S16 blkId,
  SSCE_CHAR FAR *errWord, SSCE_S16 errWordSz,
  SSCE_CHAR FAR *otherWord, SSCE_S16 otherWordSz);


extern SSCE_S16 API SSCE_CheckString(SSCE_S16 sid, const SSCE_CHAR FAR *str,
  SSCE_S32 FAR *cursor, SSCE_CHAR FAR *errWord, SSCE_S16 errWordSz,
  SSCE_CHAR FAR *otherWord, SSCE_S16 otherWordSz);


extern SSCE_S16 API SSCE_CheckWord(SSCE_S16 sid, const SSCE_CHAR FAR *word,
  SSCE_CHAR FAR *otherWord, SSCE_S16 otherWordSz);


extern SSCE_S16 API SSCE_ClearLex(SSCE_S16 sid, SSCE_S16 lexId);


extern SSCE_S16 API SSCE_CloseBlock(SSCE_S16 sid, SSCE_S16 blkId);


extern SSCE_S16 API SSCE_CloseLex(SSCE_S16 sid, SSCE_S16 lexId);


extern SSCE_S16 API SSCE_CloseSession(SSCE_S16 sid);


extern void API SSCE_CompressLexAbort(SSCE_S16 sid);


extern SSCE_S16 API SSCE_CompressLexEnd(SSCE_S16 sid);


extern SSCE_S16 API SSCE_CompressLexFile(SSCE_S16 sid,
  const char FAR *fileName, SSCE_U32 FAR *errLine);

 
extern SSCE_S16 API SSCE_CompressLexInit(SSCE_S16 sid,
  const char FAR *lexFileName, const char FAR *suffixFileName,
  SSCE_S16 langId, SSCE_U32 FAR *errLine);


extern SSCE_S32 API SSCE_CountStringWords(SSCE_S16 sid,
  const SSCE_CHAR FAR *str);


extern SSCE_S16 API SSCE_CreateLex(SSCE_S16 sid,
  const char FAR *fileName, SSCE_S16 lang);


extern SSCE_S16 API SSCE_DelBlockText(SSCE_S16 sid, SSCE_S16 blkId,
  SSCE_S32 numChars);


extern SSCE_S32 API SSCE_DelBlockWord(SSCE_S16 sid, SSCE_S16 blkId,
  SSCE_CHAR FAR *delText, SSCE_S16 delTextSz);


extern SSCE_S16 API SSCE_DelFromLex(SSCE_S16 sid, SSCE_S16 lexId,
  const SSCE_CHAR FAR *word);


extern SSCE_S32 API SSCE_DelStringText(SSCE_S16 sid, SSCE_CHAR FAR *str,
  SSCE_S32 cursor, SSCE_S32 numChars);


extern SSCE_S32 API SSCE_DelStringWord(SSCE_S16 sid, SSCE_CHAR *str,
  SSCE_S32 cursor, SSCE_CHAR FAR *delText, SSCE_S32 delTextSz);


extern SSCE_S16 API SSCE_FindLexWord(SSCE_S16 sid, SSCE_S16 lexId,
  const SSCE_CHAR FAR *word, SSCE_CHAR FAR *otherWord, SSCE_S16 otherWordSz);


extern SSCE_S32 API SSCE_GetBlock(SSCE_S16 sid, SSCE_S16 blkId,
  SSCE_CHAR FAR *block, SSCE_S32 blkSz);


extern SSCE_S16 API SSCE_GetBlockInfo(SSCE_S16 sid, SSCE_S16 blkId,
  SSCE_S32 FAR *blkLen, SSCE_S32 FAR *blkSz, SSCE_S32 FAR *curPos,
  SSCE_S32 FAR *wordCount);


extern SSCE_S16 API SSCE_GetBlockWord(SSCE_S16 sid, SSCE_S16 blkId,
  SSCE_CHAR FAR *word, SSCE_S16 wordSz);


extern SSCE_S32 API SSCE_GetLex(SSCE_S16 sid, SSCE_S16 lexId,
  SSCE_CHAR FAR *lexBfr, SSCE_S32 lexBfrSz);


extern SSCE_S16 API SSCE_GetLexInfo(SSCE_S16 sid, SSCE_S16 lexId,
  SSCE_S32 FAR *size, SSCE_S16 FAR *format, SSCE_S16 FAR *lang);


extern SSCE_U32 API SSCE_GetOption(SSCE_S16 sid, SSCE_U32 opt);


extern SSCE_S32 API SSCE_GetStringWord(SSCE_S16 sid, const SSCE_CHAR FAR *str,
  SSCE_S32 cursor, SSCE_CHAR FAR *word, SSCE_S16 wordSz);


extern SSCE_S16 API SSCE_InsertBlockText(SSCE_S16 sid, SSCE_S16 blkId,
  const SSCE_CHAR FAR *text);


extern SSCE_S32 API SSCE_InsertStringText(SSCE_S16 sid, SSCE_CHAR FAR *str,
  SSCE_S32 strSz, SSCE_S32 cursor, const SSCE_CHAR FAR *text);


extern SSCE_S16 API SSCE_NextBlockWord(SSCE_S16 sid, SSCE_S16 blkId);


extern SSCE_S16 API SSCE_OpenBlock(SSCE_S16 sid, SSCE_CHAR FAR *block,
  SSCE_S32 blkLen, SSCE_S32 blkSz, SSCE_S16 copyBlock);


extern SSCE_S16 API SSCE_OpenLex(SSCE_S16 sid,
  const char FAR *fileName, SSCE_S32 memBudget);


extern SSCE_S16 API SSCE_OpenSession(void);


extern SSCE_S16 API SSCE_ReplaceBlockWord(SSCE_S16 sid,
  SSCE_S16 blkId, const SSCE_CHAR FAR *word);


extern SSCE_S32 API SSCE_ReplaceStringWord(SSCE_S16 sid, SSCE_CHAR FAR *str,
  SSCE_S32 strSz, SSCE_S32 cursor, const SSCE_CHAR FAR *word);


extern SSCE_S16 API SSCE_SetBlockCursor(SSCE_S16 sid, SSCE_S16 blkId,
  SSCE_S32 cursor);


extern void API SSCE_SetDebugFile(const char FAR *debugFile);


extern SSCE_U32 API SSCE_SetOption(SSCE_S16 sid, SSCE_U32 opt,
  SSCE_U32 val);


extern SSCE_S16 API SSCE_Suggest(SSCE_S16 sid, const SSCE_CHAR FAR *word,
  SSCE_S16 depth, SSCE_CHAR FAR *suggBfr, SSCE_S32 suggBfrSz,
  SSCE_S16 FAR *scores, SSCE_S16 scoreSz);


extern void API SSCE_Version(char *version, SSCE_U16 versionSz);

extern SSCE_S32 API SSCE_CheckBlockDlg(HWND parent, SSCE_CHAR FAR *block,
  SSCE_S32 blkLen, SSCE_S32 blkSz, SSCE_S16 showContext);


extern SSCE_S32 API SSCE_CheckBlockDlgTmplt(HWND parent, SSCE_CHAR FAR *block,
  SSCE_S32 blkLen, SSCE_S32 blkSz, SSCE_S16 showContext, HINSTANCE clientInst,
  const char FAR *spellDlgTmpltName,
  const char FAR *lexDlgTmpltName, const char FAR *optDlgTmpltName,
  const char FAR *newLexDlgTmpltName);


extern SSCE_S16 API SSCE_CheckCtrlDlg(HWND parent, HWND ctrlWin,
  SSCE_S16 selTextOnly);


extern SSCE_S16 API SSCE_CheckCtrlDlgTmplt(HWND parent, HWND ctrlWin,
  SSCE_S16 selTextOnly, HINSTANCE clientInst,
  const char FAR *spellDlgTmpltName,
  const char FAR *lexDlgTmpltName, const char FAR *optDlgTmpltName,
  const char FAR *newLexDlgTmpltName);


extern SSCE_S16 API SSCE_EditLexDlg(HWND parent);


extern SSCE_S16 API SSCE_EditLexDlgTmplt(HWND parent, HINSTANCE hInst,
  const char FAR *dlgTmpltName, const char FAR *newLexDlgTmptName);


extern SSCE_S16 API SSCE_GetAutoCorrect(void);


extern void API SSCE_GetHelpFile(char FAR *fileName, SSCE_U16 fileNameSz);


extern SSCE_S16 API SSCE_GetLexId(const char FAR *lexFileName);


extern void API SSCE_GetMainLexFiles(char FAR *fileList,
  SSCE_U16 fileListSz);


extern void API SSCE_GetMainLexPath(char FAR *path, SSCE_U16 pathSz);


extern SSCE_S16 API SSCE_GetMinSuggestDepth(void);


extern void API SSCE_GetRegTreeName(char FAR *regTreeName,
  SSCE_U16 regTreeNameSz);


extern void API SSCE_GetSelUserLexFile(char FAR *fileName,
  SSCE_U16 fileNameSz);


extern SSCE_S16 API SSCE_GetSid(void);


extern void API SSCE_GetStatistics(SSCE_U32 FAR *wordsChecked,
  SSCE_U32 FAR *wordsChanged, SSCE_U32 FAR *errorsDetected);


extern void API SSCE_GetStringTableName(char FAR *tableName,
  SSCE_U16 tableNameSz);


extern void API SSCE_GetUserLexFiles(char FAR *fileList,
  SSCE_U16 fileListSz);


extern void API SSCE_GetUserLexPath(char FAR *path, SSCE_U16 pathSz);


extern SSCE_S16 API SSCE_OptionsDlg(HWND parent);


extern SSCE_S16 API SSCE_OptionsDlgTmplt(HWND parent, HINSTANCE hInst,
  const char FAR *tmpltName);


extern SSCE_S16 API SSCE_ResetLex(void);


extern SSCE_S16 API SSCE_SetAutoCorrect(SSCE_S16 ac);


extern void API SSCE_SetDialogOrigin(SSCE_S16 x, SSCE_S16 y);


extern SSCE_S16 API SSCE_SetHelpFile(const char FAR *helpFile);


extern SSCE_S16 API SSCE_SetIniFile(const char FAR *iniFile);


extern SSCE_S16 API SSCE_SetKey(SSCE_U32 key);


extern SSCE_S16 API SSCE_SetMainLexFiles(const char FAR *fileList);


extern SSCE_S16 API SSCE_SetMainLexPath(const char FAR *path);


extern SSCE_S16 API SSCE_SetMinSuggestDepth(SSCE_S16 depth);


extern SSCE_S16 API SSCE_SetRegTreeName(const char FAR *regTreeName);


extern SSCE_S16 API SSCE_SetSelUserLexFile(const char FAR *fileName);


extern SSCE_S16 API SSCE_SetStringTableName(const char FAR *tableName);


extern SSCE_S16 API SSCE_SetUserLexFiles(const char FAR *fileList);


extern SSCE_S16 API SSCE_SetUserLexPath(const char FAR *path);