Common/SSCE/sdk/vb/ssce.bas


Declare Sub SSCE_GetStatistics Lib "ssce5332.dll" (wordsChecked&, wordsChanged&, errorsDetected&)

Declare Sub SSCE_GetStringTableName Lib "ssce5332.dll" (ByVal tableName$, _
  ByVal tableNameSz%)

Declare Sub SSCE_GetUserLexFiles Lib "ssce5332.dll" (ByVal fileList$, _
  ByVal fileListSz%)

Declare Sub SSCE_GetUserLexPath Lib "ssce5332.dll" (ByVal path$, ByVal pathSz%)

Declare Function SSCE_OptionsDlg Lib "ssce5332.dll" (ByVal parent&) As Integer

Declare Function SSCE_OptionsDlgTmplt Lib "ssce5332.dll" (ByVal parent&, _
  ByVal clientInst&, ByVal optDlgTmplt$) As Integer

Declare Function SSCE_ResetLex Lib "ssce5332.dll" () As Integer

Declare Function SSCE_SetAutoCorrect Lib "ssce5332.dll" (ByVal ac%) As Integer

Declare Sub SSCE_SetDialogOrigin Lib "ssce5332.dll" (ByVal x%, ByVal y%)

Declare Function SSCE_SetHelpFile Lib "ssce5332.dll" (ByVal helpFile$) As _
  Integer

Declare Function SSCE_SetIniFile Lib "ssce5332.dll" (ByVal iniFile$) As Integer

Declare Function SSCE_SetKey Lib "ssce5332.dll" (ByVal key&) As Integer

Declare Function SSCE_SetMainLexFiles Lib "ssce5332.dll" (ByVal fileList$) As _
  Integer

Declare Function SSCE_SetMainLexPath Lib "ssce5332.dll" (ByVal path$) As _
  Integer

Declare Function SSCE_SetMinSuggestDepth Lib "ssce5332.dll" (ByVal depth%) As _
  Integer

Declare Function SSCE_SetRegTreeName Lib "ssce5332.dll" (ByVal regTreeName$) _
  As Integer

Declare Function SSCE_SetSelUserLexFile Lib "ssce5332.dll" (ByVal fileName$) As Integer

Declare Function SSCE_SetStringTableName Lib "ssce5332.dll" (ByVal tableName$) _
  As Integer

Declare Function SSCE_SetUserLexFiles Lib "ssce5332.dll" (ByVal fileList$) As _
  Integer

Declare Function SSCE_SetUserLexPath Lib "ssce5332.dll" (ByVal path$) As _
Integer

#Else

' Win16 declarations:

Declare Function SSCE_AddToLex Lib "ssce5316.dll" (ByVal sid%, ByVal lexId%, _
  ByVal word$, ByVal action%, ByVal otherWord$) As Integer

Declare Function SSCE_CheckBlock Lib "ssce5316.dll" (ByVal sid%, _
  ByVal blkId%, ByVal errWord$, ByVal errWordSz%, ByVal otherWord$, _
  ByVal otherWordSz%) As Integer

Declare Function SSCE_CheckString Lib "ssce5316.dll" (ByVal sid%, _
  ByVal str$, cursor&, ByVal errWord$, ByVal errWordSz%, _
  ByVal otherWord$, ByVal otherWordSz%) As Integer

Declare Function SSCE_CheckWord Lib "ssce5316.dll" (ByVal sid%, _
  ByVal word$, ByVal otherWord$, ByVal otherWordSz%) As Integer

Declare Function SSCE_ClearLex Lib "ssce5316.dll" (ByVal sid%, ByVal lexId%) _
  As Integer

Declare Function SSCE_CloseBlock Lib "ssce5316.dll" (ByVal sid%, ByVal blkId%) _
  As Integer

Declare Function SSCE_CloseLex Lib "ssce5316.dll" (ByVal sid%, ByVal lexId%) _
  As Integer

Declare Function SSCE_CloseSession Lib "ssce5316.dll" (ByVal sid%) As Integer

Declare Sub SSCE_CompressLexAbort Lib "ssce5316.dll" (ByVal sid%)

Declare Function SSCE_CompressLexEnd Lib "ssce5316.dll" (ByVal sid%) As Integer

Declare Function SSCE_CompressLexFile Lib "ssce5316.dll" (ByVal sid%, _
  ByVal fileName$, errLine&) As Integer
  
Declare Function SSCE_CompressLexInit Lib "ssce5316.dll" (ByVal sid%, _
  ByVal lexFileName$, ByVal suffixFileName, ByVal langId%, errLine&) As Integer

Declare Function SSCE_CountStringWords Lib "ssce5316.dll" (ByVal sid%, _
  ByVal str$) As Long

Declare Function SSCE_CreateLex Lib "ssce5316.dll" (ByVal sid%, _
  ByVal fileName$, ByVal lang%) As Integer

Declare Function SSCE_DelBlockText Lib "ssce5316.dll" (ByVal sid%, _
  ByVal blkId%, ByVal numChars&) As Integer

Declare Function SSCE_DelBlockWord Lib "ssce5316.dll" (ByVal sid%, _
  ByVal blkId%, ByVal delText$, ByVal delTextSz%) As Long

Declare Function SSCE_DelFromLex Lib "ssce5316.dll" (ByVal sid%, ByVal lexId%, _
  ByVal word$) As Integer

Declare Function SSCE_DelStringText Lib "ssce5316.dll" (ByVal sid%, _
  ByVal str$, ByVal cursor&, ByVal numChars&) As Long

Declare Function SSCE_DelStringWord Lib "ssce5316.dll" (ByVal sid%, _
  ByVal str$, ByVal cursor&, ByVal delText$, ByVal delTextSz&) As Long

Declare Function SSCE_FindLexWord Lib "ssce5316.dll" (ByVal sid%, _
  ByVal lexId%, ByVal word$, ByVal otherWord$, ByVal otherWordSz%) As Integer

Declare Function SSCE_GetBlock Lib "ssce5316.dll" (ByVal sid%, ByVal blkId%, _
  ByVal block$, ByVal blkSz&) As Long

Declare Function SSCE_GetBlockInfo Lib "ssce5316.dll" (ByVal sid%, ByVal blkId%, _
  blkLen&, blkSz&, curPos&, wordCount&) As Integer

Declare Function SSCE_GetBlockWord Lib "ssce5316.dll" (ByVal sid%, ByVal blkId%, _
  ByVal word$, ByVal wordSz%) As Integer

Declare Function SSCE_GetLex Lib "ssce5316.dll" (ByVal sid%, ByVal lexId%, _
  ByVal lexBfr$, ByVal lexBfrSz&) As Long

Declare Function SSCE_GetLexInfo Lib "ssce5316.dll" (ByVal sid%, ByVal lexId%, _
  lexSz&, lexFormat%, lang%) As Integer

Declare Function SSCE_GetOption Lib "ssce5316.dll" (ByVal sid%, ByVal opt&) As Long

Declare Function SSCE_GetStringWord Lib "ssce5316.dll" (ByVal sid%, _
  ByVal str$, ByVal cursor&, ByVal word$, ByVal wordSz%) As Long

Declare Function SSCE_InsertBlockText Lib "ssce5316.dll" (ByVal sid%, ByVal blkId%, _
  ByVal text$) As Integer

Declare Function SSCE_InsertStringText Lib "ssce5316.dll" (ByVal sid%, _
  ByVal str$, ByVal strSz&, ByVal cursor&, ByVal text$) As Long

Declare Function SSCE_NextBlockWord Lib "ssce5316.dll" (ByVal sid%, ByVal blkId%) As _
  Integer

Declare Function SSCE_OpenBlock Lib "ssce5316.dll" (ByVal sid%, ByVal block$, _
  ByVal blkLen&, ByVal blkSz&, ByVal copyBlock%) As Integer

Declare Function SSCE_OpenLex Lib "ssce5316.dll" (ByVal sid%, ByVal fileName$, _
  ByVal memBudget&) As Integer

Declare Function SSCE_OpenSession Lib "ssce5316.dll" () As Integer

Declare Function SSCE_ReplaceBlockWord Lib "ssce5316.dll" (ByVal sid%, _
  ByVal blkId%, ByVal word$) As Integer

Declare Function SSCE_ReplaceStringWord Lib "ssce5316.dll" (ByVal sid%, _
  ByVal str$, ByVal strSz&, ByVal cursor&, ByVal word$) As Long

Declare Function SSCE_SetBlockCursor Lib "ssce5316.dll" (ByVal sid%, _
  ByVal blkId%, ByVal cursor&) As Integer

Declare Sub SSCE_SetDebugFile Lib "ssce5316.dll" (ByVal debugFile$)

Declare Function SSCE_SetOption Lib "ssce5316.dll" (ByVal sid%, ByVal opt&, _
  ByVal optVal&) As Long
  
Declare Function SSCE_Suggest Lib "ssce5316.dll" (ByVal sid%, ByVal word$, _
  ByVal depth%, ByVal suggBfr$, ByVal suggBfrSz&, scores%, ByVal nScores%) As Integer

Declare Sub SSCE_Version Lib "ssce5316.dll" (ByVal version$, ByVal versionSz%)

' Functions in the Windows API:

Declare Function SSCE_CheckBlockDlg Lib "ssce5316.dll" (ByVal parent%, _
  ByVal block$, ByVal blkLen&, ByVal blkSz&, ByVal showContext%) As Long

Declare Function SSCE_CheckBlockDlgTmplt Lib "ssce5316.dll" (ByVal parent%, _
  ByVal block$, ByVal blkLen&, ByVal blkSz&, ByVal showContext%, _
  ByVal clientInst%, ByVal spellDlgTmplt$, ByVal dictDlgTmplt$, _
  ByVal optDlgTmplt$, ByVal newLexDlgTmplt$) As Long

Declare Function SSCE_CheckCtrlDlg Lib "ssce5316.dll" (ByVal parent%, _
  ByVal ctrlWin%, ByVal selTextOnly%) As Integer

Declare Function SSCE_CheckCtrlDlgTmplt Lib "ssce5316.dll" (ByVal parent%, _
  ByVal ctrlWin%, ByVal selTextOnly%, ByVal clientInst%, ByVal spellDlgTmplt$, _
  ByVal dictDlgTmplt$, ByVal optDlgTmplt$, ByVal newLexDlgTmplt$) As Integer

Declare Function SSCE_EditLexDlg Lib "ssce5316.dll" (ByVal parent%) As Integer

Declare Function SSCE_EditLexDlgTmplt Lib "ssce5316.dll" (ByVal parent%, _
  ByVal clientInst%, ByVal dictDlgTmplt$, ByVal newLexDlgTmplt$) As Integer

Declare Function SSCE_GetAutoCorrect Lib "ssce5316.dll" () As Integer

Declare Sub SSCE_GetHelpFile Lib "ssce5316.dll" (ByVal fileName$, _
  ByVal fileNameSz%)

Declare Function SSCE_GetLexId Lib "ssce5316.dll" (ByVal lexFileName$) As _
  Integer

Declare Sub SSCE_GetMainLexFiles Lib "ssce5316.dll" (ByVal fileList$, ByVal fileListSz%)

Declare Sub SSCE_GetMainLexPath Lib "ssce5316.dll" (ByVal path$, _
  ByVal pathSz%)

Declare Function SSCE_GetMinSuggestDepth Lib "ssce5316.dll" () As Integer

Declare Sub SSCE_GetRegTreeName Lib "ssce5316.dll" (ByVal regTreeName$, _
  ByVal regTreeNameSz%)

Declare Sub SSCE_GetSelUserLexFile Lib "ssce5316.dll" (ByVal fileName$, ByVal fileNameSz%)

Declare Function SSCE_GetSid Lib "ssce5316.dll" () As Integer

Declare Sub SSCE_GetStatistics Lib "ssce5316.dll" (wordsChecked&, wordsChanged&, errorsDetected&)

Declare Sub SSCE_GetStringTableName Lib "ssce5316.dll" (ByVal tableName$, _
  ByVal tableNameSz%)

Declare Sub SSCE_GetUserLexFiles Lib "ssce5316.dll" (ByVal fileList$, _
  ByVal fileListSz%)

Declare Sub SSCE_GetUserLexPath Lib "ssce5316.dll" (ByVal path$, ByVal pathSz%)

Declare Function SSCE_OptionsDlg Lib "ssce5316.dll" (ByVal parent%) As Integer

Declare Function SSCE_OptionsDlgTmplt Lib "ssce5316.dll" (ByVal parent%, _
  ByVal clientInst%, ByVal optDlgTmplt$) As Integer

Declare Function SSCE_ResetLex Lib "ssce5316.dll" () As Integer

Declare Function SSCE_SetAutoCorrect Lib "ssce5316.dll" (ByVal ac%) As Integer

Declare Sub SSCE_SetDialogOrigin Lib "ssce5316.dll" (ByVal x%, ByVal y%)

Declare Function SSCE_SetHelpFile Lib "ssce5316.dll" (ByVal helpFile$) As _
  Integer

Declare Function SSCE_SetIniFile Lib "ssce5316.dll" (ByVal iniFile$) As Integer

Declare Function SSCE_SetKey Lib "ssce5316.dll" (ByVal key&) As Integer

Declare Function SSCE_SetMainLexFiles Lib "ssce5316.dll" (ByVal fileList$) As _
  Integer

Declare Function SSCE_SetMainLexPath Lib "ssce5316.dll" (ByVal path$) As _
  Integer

Declare Function SSCE_SetMinSuggestDepth Lib "ssce5316.dll" (ByVal depth%) As _
  Integer

Declare Function SSCE_SetRegTreeName Lib "ssce5316.dll" (ByVal regTreeName$) _
  As Integer

Declare Function SSCE_SetSelUserLexFile Lib "ssce5316.dll" (ByVal fileName$) As Integer

Declare Function SSCE_SetStringTableName Lib "ssce5316.dll" (ByVal tableName$) _
  As Integer

Declare Function SSCE_SetUserLexFiles Lib "ssce5316.dll" (ByVal fileList$) As _
  Integer

Declare Function SSCE_SetUserLexPath Lib "ssce5316.dll" (ByVal path$) As _
Integer

#End If
